cmake_minimum_required(VERSION 3.22.1)
project(checks)
enable_testing()
add_library(checks INTERFACE)
target_include_directories(checks INTERFACE .)
target_sources(checks INTERFACE checks.h checks.hpp)
option(BUILD_CHECK_TESTS "build unit tests for the checks library" OFF)
if(BUILD_CHECK_TESTS)
    add_subdirectory(tests)
endif()
