cmake_minimum_required(VERSION 3.16.3)
project(checks)
add_library(checks INTERFACE)
target_include_directories(checks INTERFACE .)
target_sources(checks INTERFACE checks.h checks.hpp)
option(BUILD_CHECKS_TESTS "build unit tests for the checks library" OFF)
if(BUILD_CHECKS_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()
